<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/scroll"
    tools:context="com.example.balance.CollectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:src="@drawable/fall"
                android:layout_marginStart="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="balance"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/patient"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:hint="@string/patient_s_name"
            android:elevation="6dp"
            android:translationZ="6dp"
            android:paddingLeft="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/patient_drawable"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textColorHint="#F4EEEE"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            tools:ignore="RtlSymmetry" />



        <CheckBox
            android:id="@+id/Xaxis"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:text="@string/accelerometer_x_axis" />

        <CheckBox
            android:id="@+id/Yaxis"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:text="@string/accelerometer_y_axis" />

        <CheckBox
            android:id="@+id/Zaxis"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:text="@string/accelerometer_z_axis" />


        <CheckBox
            android:id="@+id/Xgyro"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:text="@string/gyroscope_x_axis" />

        <CheckBox
            android:id="@+id/Ygyro"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:text="@string/gyroscope_y_axis" />

        <CheckBox
            android:id="@+id/Zgyro"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:text="@string/gyroscope_z_axis" />

        <CheckBox
            android:id="@+id/EMG"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:text="@string/emg" />


        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/connect_drawable"
            android:onClick="connectDevice"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/connect"
            android:elevation="6dp"
            android:translationZ="6dp"/>

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/start_streaming"
            android:enabled="false"
            android:onClick="startStreaming"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:elevation="6dp"
            android:translationZ="6dp"
            android:background="@drawable/start_drawable" />

        <TextView
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginVertical="32dp"
            android:gravity="center"
            android:background="@drawable/clock"
            android:text="@string/_2_00"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:elevation="6dp"
            android:translationZ="6dp"
            android:textSize="32sp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/visualize"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginVertical="16dp"
            android:text="@string/visualize"
            android:onClick="visualize"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:elevation="6dp"
            android:translationZ="6dp"
            android:background="@drawable/visualize_drawable" />

    </LinearLayout>
</ScrollView>